--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,8 @@ flutter:
     - assets/Apple.png
     - assets/Facebook.png
     - assets/Google.png
-    - assets/backarrow.png
+    - assets/left.png
+    - assets/email.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
