--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,12 +58,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.png
-    - assets/Apple.png
-    - assets/Facebook.png
-    - assets/Google.png
-    - assets/left.png
-    - assets/email.png
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
